Обновил 404, гитхаб не переводит на Index.html

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Don't panic! </title>
     <style>
         .content p {
             text-align: center;
@@ -27,14 +27,14 @@ permalink: /404.html
         }
     </style>
     <link rel="stylesheet" href="style.css">
-    <title>404 - Не найдено.</title>
+    <title>Без паники.</title>
 </head>
 
 <body>
     <div class="main">
         <div class="content">
             <p id="p404">404</p><br>
-            <p>¯\_(ツ)_/¯<br>Простите, но такой страницы не существует.<br><a href="Index.html">На главную.</a> </p>
+            <p>Сайт не сломался. Я провожу некоторые работы по обновлению сайта. Скоро всё обязательно заработает как раньше.</p>
         </div>
     </div>
 </body></html>
