--- a/404.html
+++ b/404.html
@@ -27,14 +27,13 @@ permalink: /404.html
         }
     </style>
     <link rel="stylesheet" href="style.css">
-    <title>Без паники.</title>
 </head>
 
 <body>
     <div class="main">
         <div class="content">
-            <p id="p404">404</p><br>
-            <p>Сайт не сломался. Я провожу некоторые работы по обновлению сайта. Скоро всё обязательно заработает как раньше.</p>
+            <p id="p404">Без паники.</p><br>
+            <p>Сайт не сломался. Я провожу некоторые работы по обновлению. Скоро всё обязательно заработает как раньше.</p>
         </div>
     </div>
 </body></html>
