--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@ permalink: /404.html
 <body>
     <div class="main">
         <div class="content">
-            <p id="p404">Без паники.</p><br>
+            <p id="p404">Без <br>паники.</p><br>
             <p>Сайт не сломался. Я провожу некоторые работы по обновлению. Скоро всё обязательно заработает как раньше.</p>
             <p>А пока можете поиграть в игру "Угадай номер". Сам я не писал эту игру. Я честно позаимствовал её в готовом виде, только текст изменил.</p>
         </div>
