--- a/404.html
+++ b/404.html
@@ -29,15 +29,10 @@
 <body>
     <div class="main">
         <div class="content">
-            <p id="p404">Без <br>паники.</p><br>
+            <h1 id="p404">Без паники.</h1><br>
             <p>Сайт не сломался. Я провожу некоторые работы по обновлению. Скоро всё обязательно заработает как раньше.</p>
             <p>А пока можете поиграть в игру "Угадай номер". Сам я не писал эту игру. Я честно позаимствовал её в готовом виде, только текст изменил.</p>
         </div>
-    </div>
-
-    
- 
-
  
     <h1>Игра "Угадай номер"</h1>
 
@@ -123,5 +118,5 @@
         randomNumber = Math.floor(Math.random() * 100) + 1;
       }
     </script>
- 
+ </div>
 </body></html>
