--- a/404.html
+++ b/404.html
@@ -2,6 +2,15 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <title>Don't panic! </title>
     <style>
         .content p {
@@ -32,7 +41,7 @@
             <h1 id="p404">Без паники.</h1><br>
             <p>Сайт не сломался. Я провожу некоторые работы по обновлению. Скоро всё обязательно заработает как раньше.</p>
             <p>А пока можете поиграть в игру "Угадай номер". Сам я не писал эту игру. Я честно позаимствовал её в готовом виде, только текст изменил.</p>
-        </div>
+        
  
     <h1>Игра "Угадай номер"</h1>
 
@@ -118,5 +127,6 @@
         randomNumber = Math.floor(Math.random() * 100) + 1;
       }
     </script>
+    </div>
  </div>
 </body></html>
