А если отредактировать индекс?

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html">
-    <title>Главная страница - Владимир Маркиев</title>
+    <title>Владимир Маркиев. Технический писатель.</title>
     <link rel="stylesheet" href="style.css">
     <meta name="robots" content="follow, index" />
     <meta name="description" content="Владимир Маркиев, Vladimir Markiev: Технический писатель в Санкт-Петербурге сайт-визитка." />
@@ -14,9 +14,9 @@
     <meta property="profile:first_name" content="Владимир" />
     <meta property="profile:last_name" content="Маркиев" />
     <meta property="profile:username" content="Vladimir Markiev, Proftradi, ThePTSD" />
-    <meta property="og:url" content="https://www.vladimir-markiev.name/" />
-    <link rel="canonical" content="https://www.vladimir-markiev.name/" />
-    <meta property="og:image" content="https://www.vladimir-markiev.name/img/profile.jpg">
+    <meta property="og:url" content="https://vladimir-markiev.name/" />
+    <link rel="canonical" content="https://vladimir-markiev.name/" />
+    <meta property="og:image" content="https://vladimir-markiev.name/img/profile.jpg">
     <meta property="og:description" content="Владимир Маркиев: Технический писатель в Санкт-Петербурге сайт-визитка." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Markiev Vladimir">
