--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="style.css">
     <title>Don't panic! </title>
     <style>
         .content p {
