--- a/cases.html
+++ b/cases.html
@@ -13,9 +13,9 @@
     <meta property="profile:first_name" content="Владимир" />
     <meta property="profile:last_name" content="Маркиев" />
     <meta property="profile:username" content="Vladimir Markiev, Proftradi, ThePTSD" />
-    <meta property="og:url" content="https://www.vladimir-markiev.name" />
-    <link rel="canonical" content="https://www.vladimir-markiev.name" />
-    <meta property="og:image" content="https://www.vladimir-markiev.name/img/profile.jpg">
+    <meta property="og:url" content="https://vladimir-markiev.name" />
+    <link rel="canonical" content="https://vladimir-markiev.name" />
+    <meta property="og:image" content="https://vladimir-markiev.name/img/profile.jpg">
     <meta property="og:description" content="Владимир Маркиев: Технический писатель в Санкт-Петербурге. Портфолио, примеры работ и сертификаты." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Markiev Vladimir">
