Case-sensitive index?

--- a/Index.html
+++ b/Index.html
@@ -4,11 +4,10 @@
 <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html">
-    <title>Владимир Маркиев. Технический писатель.</title>
+    <title>Технический писатель - Владимир Маркиев.</title>
     <link rel="stylesheet" href="style.css">
     <meta name="robots" content="follow, index" />
     <meta name="description" content="Владимир Маркиев, Vladimir Markiev: Технический писатель в Санкт-Петербурге сайт-визитка." />
-
     <meta property="og:title" content="Главная страница - Владимир Маркиев" />
     <meta property="og:type" content="profile" />
     <meta property="profile:first_name" content="Владимир" />
