--- a/education.html
+++ b/education.html
@@ -4,7 +4,7 @@
 <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html">
-    <title>Образование - Владимир Маркиев</title>
+    <title>Моё образование - Владимир Маркиев</title>
     <link rel="stylesheet" href="style.css">
     <meta name="robots" content="follow, index" />
     <meta name="description" content="Владимир Маркиев, Vladimir Markiev: Технический писатель в Санкт-Петербурге. Образование и квалификация." />
