index, not Index

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
 <body>
     <div class="sidenav">
-        <a tabindex="1" href="Index.html">Главная</a>
+        <a tabindex="1" href="index.html">Главная</a>
         <a tabindex="2" class="current" href="#top">Обо мне</a>
         <a tabindex="3" href="education.html">Образование</a>
         <a tabindex="4" href="experience.html">Резюме</a>
@@ -66,7 +66,7 @@
     <div class="topnav">
         <a href="#top" class="navbar">Выпадающее меню ---></a>
         <div id="myLinks">
-            <a tabindex="1" href="Index.html">Главная</a>
+            <a tabindex="1" href="index.html">Главная</a>
             <a tabindex="2" class="current" href="#top">Обо мне</a>
             <a tabindex="3" href="education.html">Образование</a>
             <a tabindex="4" href="experience.html">Резюме</a>
@@ -96,7 +96,7 @@
         <div class="header">
             <nav>
                 <ul class="breadcrumb">
-                    <li><a tabindex="7" href="Index.html">Главная</a></li>
+                    <li><a tabindex="7" href="index.html">Главная</a></li>
                     <li>Обо мне</li>
                 </ul>
             </nav>
