--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
 <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html">
-    <title>Резюме - Владимир Маркиев</title>
+    <title>Моё резюме - Владимир Маркиев</title>
     <link rel="stylesheet" href="style.css">
     <meta name="robots" content="follow, index" />
     <meta name="description" content="Владимир Маркиев, Vladimir Markiev: Технический писатель в Санкт-Петербурге. Резюме и опыт работы. История трудовой деятельности." />
@@ -101,7 +101,7 @@
 
 <body>
     <div class="sidenav">
-        <a tabindex="1" href="Index.html">Главная</a>
+        <a tabindex="1" href="index.html">Главная</a>
         <a tabindex="2" href="about.html">Обо мне</a>
         <a tabindex="3" href="education.html">Образование</a>
         <a tabindex="4" class="current" href="#top">Резюме</a>
@@ -111,7 +111,7 @@
     <div class="topnav">
         <a href="#top" class="navbar">Выпадающее меню ---></a>
         <div id="myLinks">
-            <a tabindex="1" href="Index.html">Главная</a>
+            <a tabindex="1" href="index.html">Главная</a>
             <a tabindex="2" href="about.html">Обо мне</a>
             <a tabindex="3" href="education.html">Образование</a>
             <a tabindex="4" class="current" href="#top">Резюме</a>
@@ -141,7 +141,7 @@
         <div class="header">
             <nav>
                 <ul class="breadcrumb">
-                    <li><a tabindex="7" href="Index.html">Главная</a></li>
+                    <li><a tabindex="7" href="index.html">Главная</a></li>
                     <li>Опыт работы</li>
                 </ul>
             </nav>
