--- a/searchingfor.html
+++ b/searchingfor.html
@@ -55,7 +55,7 @@
 
 <body>
     <div class="sidenav">
-        <a tabindex="1" href="Index.html">Главная</a>
+        <a tabindex="1" href="index.html">Главная</a>
         <a tabindex="2" href="about.html">Обо мне</a>
         <a tabindex="3" href="education.html">Образование</a>
         <a tabindex="4" href="experience.html">Резюме</a>
@@ -65,7 +65,7 @@
     <div class="topnav">
         <a href="#top" class="navbar">Выпадающее меню ---></a>
         <div id="myLinks">
-            <a tabindex="1" href="Index.html">Главная</a>
+            <a tabindex="1" href="index.html">Главная</a>
             <a tabindex="2" href="about.html">Обо мне</a>
             <a tabindex="3" href="education.html">Образование</a>
             <a tabindex="4" href="experience.html">Резюме</a>
@@ -94,7 +94,7 @@
         <div class="header">
             <nav>
                 <ul class="breadcrumb">
-                    <li><a tabindex="7" href="Index.html">Главная</a></li>
+                    <li><a tabindex="7" href="index.html">Главная</a></li>
                     <li>Резюме</li>
                 </ul>
             </nav>
