--- a/404.html
+++ b/404.html
@@ -13,26 +13,19 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="style.css">
     <title>Don't panic! </title>
-    <style>
-
-        #p404 {
-            font-size: 7em;
-            padding-bottom: 1.5em;
-            padding-top: 0.5em;
-        }
-    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="main">
         <div class="content">
-            <h1 id="p404">Без паники.</h1><br>
-            <p>Сайт не сломался. Я провожу некоторые работы по обновлению. Скоро всё обязательно заработает как раньше.</p>
-            <p>А пока можете поиграть в игру "Угадай номер". Сам я не писал эту игру. Я честно позаимствовал её в готовом виде, только текст изменил.</p>
+            <h1 class="h1">Произошла ошибка.</h1><br>
+            <p>Сайт не сломался. Скорей всего вы набрали неверный адрес. Проверьте ещё раз адресную строку. Может быть, вы случайно ввели заглавную букву в адресе?</p>
+            <p>Попробуйте перейти на <a href="index.html">Главную </a> или <a href="javascript:history.back()" title="">Предыдущую страницу</a></p>
+            <p>Надоел сайт? Сыграйте в игру. Я честно позаимствовал её в готовом виде, только текст изменил.</p>
         
  
-    <h1>Игра "Угадай номер"</h1>
+    <h2 class="h1">Игра "Угадай номер"</h1>
 
     <p>Игра выбирает случайный номер от 1 до 100. У вас есть 10 попыток, чтобы угадать его. После каждой попытки игра скажет, если вы назвали число больше или меньше загаданного. Удачи!</p>
 
